--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <!-- Link to fontawesome icons -->
+    <script src="https://kit.fontawesome.com/edd75315ff.js" crossorigin="anonymous"></script>
+
+    <!-- Site Title -->
+    <title>Mern Blog</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
